Add some styling, a header, the token when logging in and redirect to the user page

--- a/public/styles/beer-shelf.css
+++ b/public/styles/beer-shelf.css
@@ -1,5 +1,6 @@
 body {
-  padding: 20px;
+  padding-top: 70px;
+  /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 
 h1 {
@@ -8,4 +9,11 @@ h1 {
 
 .error-text {
   color: red;
+}
+
+.top-nav>li>a {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    line-height: 20px;
+    color: #999;
 }
