--- a/public/component/shelf/shelf.template.html
+++ b/public/component/shelf/shelf.template.html
@@ -15,7 +15,7 @@
     </div>
     <div class="col-md-4" id="shelf-grid">
       <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true"
+        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true"
           aria-expanded="true">
           Columns
           <span class="caret"></span>
@@ -28,10 +28,10 @@
           <li><a href="#">Separated link</a></li>
         </ul>
       </div>
-      <button type="button" class="btn btn-secondary">
-        <i class="fa fa-download" aria-hidden="true" ></i> Export 
-      </button>
-      <button type="button" class="btn btn-secondary">
+      <a role="button" class="btn btn-default" ng-href="/api/shelf-beers/user/{{$ctrl.currentUser.id}}/export" target="_self">
+        <i class="fa fa-download" aria-hidden="true" ></i> Export
+      </a>  
+      <button type="button" class="btn btn-default">
         <i class="fa fa-upload" aria-hidden="true" ></i> Import 
       </button>
     </div>
