--- a/public/component/shelf/shelf.template.html
+++ b/public/component/shelf/shelf.template.html
@@ -28,12 +28,18 @@
           <li><a href="#">Separated link</a></li>
         </ul>
       </div>
+      <input class='btn btn-default' type="file" nv-file-select="" uploader="uploader" /> 
+      <!--<button type="button" class="btn btn-default" nv-file-select="" uploader="uploader">Select File</button>-->
       <a role="button" class="btn btn-default" ng-href="/api/shelf-beers/user/{{$ctrl.currentUser.id}}/export" target="_self">
         <i class="fa fa-download" aria-hidden="true" ></i> Export
       </a>  
       <button type="button" class="btn btn-default" data-toggle="modal" data-target="#modal-import">
         <i class="fa fa-upload" aria-hidden="true" ></i> Import 
       </button>
+
+      <label class="btn btn-default btn-file">
+          Browse <input type="file" style="display: none;">
+      </label>
     </div>
   </div>
   <div class="row content-area">
@@ -151,18 +157,22 @@
       </modal-window>
 
       <modal-window modal-id='modal-import' modal-title='Import' hide-modal-buttons='true' modal-focus='upl-import-file'>
+        <div>
+        <!--<input class='btn btn-default' type="file" nv-file-select="" uploader="uploader" /> 
+        <button class='btn btn-primary' type='button' ng-click='$ctrl.uploader.uploadItem()'>Submit</button>-->
         <form id="upload-form" action="{{'/api/shelf-beers/user/' + $ctrl.currentUser.id + '/import'}}" method="post" enctype="multipart/form-data">
             <fieldset>
                 <legend>Upload Data</legend>
                 <div>
                     <!-- The name here is important, and will be used later to reference the data -->
                     <input id='upl-import-file' type="file" name="shelfCsvFile" accept="text/cvs">
-                </div>
+                </div>  
                 <div>
                     <input type="submit" value="Submit"/>
                 </div>
             </fieldset>
         </form>
+        </div>
       </modal-window>
     </div>
   </div>
