--- a/public/component/shelf/shelf.template.html
+++ b/public/component/shelf/shelf.template.html
@@ -96,7 +96,8 @@
           <div class="form-group">
             <label for "txt-beer left-pad-control">Beer</label>
             <input type="text" id="beer-selection" ng-model="$ctrl.newBeerSelection" uib-typeahead="beer as beer.name for beer in $ctrl.beerDb | filter:$viewValue"
-              typeahead-template-url="beer-template.html" typeahead-show-hint="true" class="form-control" autocomplete="off">
+              typeahead-template-url="beer-template.html" typeahead-show-hint="true" class="form-control" autocomplete="off"
+              typeahead-wait-ms="500">
           </div>
 
           <div class="form-group">
